traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:9: error: value update is not a member of Int
  if(getX() = large-1 && getY() = hauteur-1){
     ^TraversalByColumn:9: error: value && is not a member of Int
  if(getX() = large-1 && getY() = hauteur-1){
                      ^