traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  
  
}

var large = getMondeLargeur()
var hauteur = getMondeHauteur()

def posFin(): Boolean={
  if(getX() = large-1 && getY() = hauteur-1){
    return true
  }else{
    return false
  }
}

def tp(){
  while(!posFin){
    if(getY() != hauteur-1){
      setPos(getX(),getY()+1)
    }else{
      setPos(getX()+1,0)
    }
  }
}